<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.trifork</groupId>
    <artifactId>vmaps</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>jar</packaging>

    <name>vector-maps</name>
    <url>https://github.com/krestenkrab/vector-maps</url>

    <properties>
        <os.installed.protoc.version>2.3.0</os.installed.protoc.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	<scala.version>2.8.1</scala.version> 
        <skip.tests>false</skip.tests>
    </properties>

    <repositories>
      <repository>
	<id>scala-tools.org</id>
	<name>Scala-tools Maven2 Repository</name>
	<url>http://scala-tools.org/repo-releases</url>
      </repository>
    </repositories>

    <pluginRepositories>
        <pluginRepository>
            <id>dtrott</id>
            <name>maven-protoc-plugin repository</name>
            <url>http://maven.davidtrott.com/repository</url>
        </pluginRepository>
    </pluginRepositories>

    <dependencies>
        <dependency>
            <groupId>com.google.protobuf</groupId>
            <artifactId>protobuf-java</artifactId>
            <version>${os.installed.protoc.version}</version>
        </dependency>

        <dependency>
	  <groupId>protobuf</groupId>
	  <artifactId>protobuf-codec-json</artifactId>
	  <version>1.1</version>
        </dependency>

	<dependency>
	  <groupId>junit</groupId>
	  <artifactId>junit</artifactId>
	  <version>4.8.2</version>
	</dependency>

        <dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
            <version>20090211</version>
        </dependency>

	<dependency>
	  <groupId>javax.activation</groupId>
	  <artifactId>activation</artifactId>
	  <version>1.1.1</version>
	</dependency>
	<dependency>
	  <groupId>javax.mail</groupId>
	  <artifactId>mail</artifactId>
	  <version>1.4</version>
	</dependency>

        <dependency>
          <groupId>org.scala-lang</groupId>
          <artifactId>scala-library</artifactId>
          <version>${scala.version}</version>
          <type>jar</type>
          <scope>compile</scope>
        </dependency> 

	<dependency>
	  <groupId>org.scala-tools.testing</groupId>
	  <artifactId>specs_${scala.version}</artifactId>
	  <version>1.6.7</version>
          <scope>test</scope>
	</dependency>

	<dependency>
	  <groupId>org.scala-tools.testing</groupId>
	  <artifactId>scalacheck_2.8.1</artifactId>
	  <version>1.8</version>
          <scope>test</scope>
	</dependency>

    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>1.6</source>
                    <target>1.6</target>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.5</version>
                <configuration>
                    <skip>${skip.tests}</skip>
                    <argLine>-Xms128m -Xmx256m -XX:PermSize=128m -XX:MaxPermSize=256m</argLine>
                    <parallel>false</parallel>
                </configuration>
            </plugin>

            <plugin>
                <groupId>com.google.protobuf.tools</groupId>
                <artifactId>maven-protoc-plugin</artifactId>
                <configuration>
                    <outputDirectory>src/main/gen/</outputDirectory>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>compile</goal>
                        </goals>
                        <phase>generate-sources</phase>
                    </execution>
                </executions>
            </plugin>

	    <plugin>
	      <groupId>org.scala-tools</groupId>
	      <artifactId>maven-scala-plugin</artifactId>
	      <executions>
		<execution>
		  <id>scala-compile-first</id>
		  <phase>process-resources</phase>
		  <goals>
		    <goal>add-source</goal>
		    <goal>compile</goal>
		  </goals>
		</execution>									
		<execution>
		  <id>scala-test-compile</id>
		  <phase>process-test-resources</phase>
		  <goals>
		    <goal>testCompile</goal>
		  </goals>
		</execution>
	      </executions>
	    </plugin>
        </plugins>

    </build>
</project>
